Stabilization of the SSH reconnection in all conditions

--- a/README.md.j2
+++ b/README.md.j2
@@ -171,6 +171,10 @@ Generate the key using a different format, examples:
 ssh-keygen -t ed25519 -b 4096
 ```
 
+## More documentation
+
+See here: [docs/pages](./docs/pages)
+
 ## Developing
 
 - The docker container is built on quay.io and hub.docker com
