Refactor of naming + docs

--- a/README.md.j2
+++ b/README.md.j2
@@ -175,6 +175,12 @@ ssh-keygen -t ed25519 -b 4096
 
 See here: [docs/pages](./docs/pages)
 
+### Configuration reference
+
+For list of all possible options to use in configuration file please check example configuration file.
+
+Here: [example/reference.py](./example/reference.py)
+
 ## Developing
 
 - The docker container is built on quay.io and hub.docker com
